# tardigrade_hydra

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.rst  build_docs.sh  environment.txt  new_build.sh  reduced_environment.txt
.github/workflows/: github-test.yml
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  api.rst  build.txt  changelog.rst  conf.py.in  dependencies.txt  devops.rst  gitlab_setup.rst  release_philosophy.rst  software.bib  targets.txt  user.rst
modulefiles/: cpp_stub-env  hydra-env  tardigrade-hydra-env  tardigrade_hydra-env
recipe/: conda_build_config.yaml  meta.yaml
src/abaqus/tests/: CMakeLists.txt  test_abaqus.sh
src/cpp/: CMakeLists.txt  cpp_stub.cpp  hydra.cpp  hydra.h  hydra_umat.cpp  hydra_umat.h  tardigrade-hydra.cpp  tardigrade-hydra.h  tardigrade-hydraLinearElasticity.cpp  tardigrade-hydraLinearElasticity.h  tardigrade-hydraLinearViscoelasticity.cpp  tardigrade-hydraLinearViscoelasticity.h  tardigrade-hydraPeryznaViscoplasticity.cpp  tardigrade-hydraPeryznaViscoplasticity.h  tardigrade-hydraThermalExpansion.cpp  tardigrade-hydraThermalExpansion.h  tardigrade-hydra_umat.cpp  tardigrade-hydra_umat.h  tardigrade_ArmijoGradientDamping.cpp  tardigrade_ArmijoGradientDamping.h  tardigrade_ArmijoGradientDamping.tpp  tardigrade_ArmijoLineSearchStep.cpp  tardigrade_ArmijoLineSearchStep.h  tardigrade_ArmijoLineSearchStep.tpp  tardigrade_CHIPFoamStrainEnergy.cpp  tardigrade_CHIPFoamStrainEnergy.h  tardigrade_CHIPFoamStrainEnergy.tpp  tardigrade_CoreDefinitions.cpp  tardigrade_CoreDefinitions.h  tardigrade_CoreDefinitions.tpp  tardigrade_CustomErrors.cpp  tardigrade_CustomErrors.h  tardigrade_CustomErrors.tpp  tardigrade_DeformationBase.cpp  tardigrade_DeformationBase.h  tardigrade_DeformationBase.tpp  tardigrade_DeformationDecompositionBase.cpp  tardigrade_DeformationDecompositionBase.h  tardigrade_DeformationDecompositionBase.tpp  tardigrade_DeformationEvolutionBase.h  (+143 more)
src/cpp/tests/: CMakeLists.txt  test_hydra.cpp  test_tardigrade-hydra.cpp  test_tardigrade-hydraLinearElasticity.cpp  test_tardigrade-hydraLinearViscoelasticity.cpp  test_tardigrade-hydraPeryznaViscoplasticity.cpp  test_tardigrade-hydraThermalExpansion.cpp  test_tardigrade_ArmijoGradientDamping.cpp  test_tardigrade_ArmijoLineSearchStep.cpp  test_tardigrade_CHIPFoamStrainEnergy.cpp  test_tardigrade_CoreDefinitions.cpp  test_tardigrade_CustomErrors.cpp  test_tardigrade_DeformationBase.cpp  test_tardigrade_DeformationDecompositionBase.cpp  test_tardigrade_DeformationEvolutionBase.cpp  test_tardigrade_GradientDamping.cpp  test_tardigrade_GradientStep.cpp  test_tardigrade_HyperelasticBase.cpp  test_tardigrade_IterativeSolverBase.cpp  test_tardigrade_LevenbergMarquardtSolver.cpp  test_tardigrade_LevenbergMarquardtStep.cpp  test_tardigrade_MatrixMap.cpp  test_tardigrade_MaxRowPreconditioner.cpp  test_tardigrade_MooneyRivlinStrainEnergy.cpp  test_tardigrade_NeoHookianStrainEnergy.cpp  test_tardigrade_NewtonSolver.cpp  test_tardigrade_NewtonStep.cpp  test_tardigrade_NonlinearSolverBase.cpp  test_tardigrade_NonlinearStepBase.cpp  test_tardigrade_PreconditionerBase.cpp  test_tardigrade_RelaxedSolver.cpp  test_tardigrade_RelaxedSolverBase.cpp  test_tardigrade_ResidualBase.cpp  test_tardigrade_SequentialQuadraticProgrammingStep.cpp  test_tardigrade_SetDataStorage.cpp  test_tardigrade_SolverBase.cpp  test_tardigrade_SolverStep.cpp  test_tardigrade_SolverStepBase.cpp  test_tardigrade_StepDampingBase.cpp  test_tardigrade_SubcyclerSolver.cpp  (+24 more)
